--- a/test.html
+++ b/test.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./css/main.css">
-
 </head>
 <body>
-<h1>ghrhome.github.io</h1>
-<a href="test.html">test</a>
+ <h1>TEST</h1>
+<img src="./images/timg.jpg">
 </body>
 </html>
