--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./css/main.css">
-
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script> -->
+    <script src="lib/p5/p5.min.js"></script>
+    <script src="./js/sketch.js"></script>
+    
 </head>
 <body>
-<h1>ghrhome.github.io</h1>
-<a href="test.html">test2</a>
+    <h1>HOME IO</h1>
+    <main>
+        <div id="p5Container"></div>
+    </main>
 </body>
 </html>
